[package]
name = "paper-benchmark"
version = "1.3.5"
edition = "2021"

[dependencies]
paper_client = { git = "ssh://git@github.com/Paper-Book/paper-client-rs.git", tag = "v2.5.2" }
kwik = { git = "https://github.com/KiaShakiba/kwik.git", tag = "v1.11.6" }
clap = { version = "4.5.19", features = ["derive"] }
byteorder = "1.5.0"
crossbeam-channel = "0.5.13"
statrs = "0.17.1"
spin_sleep = "1.2.1"

[[bin]]
name = "paper-benchmark"
path = "src/main.rs"
