[package]
name = "paper-benchmark"
version = "1.3.7"
edition = "2021"

[dependencies]
paper_client = { git = "ssh://git@github.com/Paper-Book/paper-client-rs.git", tag = "v1.10.0" }
kwik = { git = "https://github.com/KiaShakiba/kwik.git", tag = "v1.18.5" }
clap = { version = "4.5.40", features = ["derive"] }
byteorder = "1.5.0"
crossbeam-channel = "0.5.15"
statrs = "0.18.0"
spin_sleep = "1.3.1"

[[bin]]
name = "paper-benchmark"
path = "src/main.rs"
