[package]
name = "paper-benchmark"
version = "1.3.8"
edition = "2024"
license = "AGPL-3.0"
description = "A CLI tool for benchmarking PaperCache."
repository = "https://github.com/PaperCache/paper-benchmark.git"
readme = "README.md"
homepage = "https://papercache.io"
keywords = ["caching", "PaperCache"]
categories = ["caching"]

[dependencies]
paper-client = "1.10.1"
kwik = "1.18.6"
clap = { version = "4.5.40", features = ["derive"] }
byteorder = "1.5.0"
crossbeam-channel = "0.5.15"
statrs = "0.18.0"
spin_sleep = "1.3.2"
